# gridfire

./: .gitignore  CMakeLists.txt  README.md
cmake/: gridfire_config.in
resources/: settings.ini
src/: device.cpp  device.hpp  hud_pipeline.cpp  hud_pipeline.hpp  input.cpp  input.hpp  main.cpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp
src/shaders/: .raymarch.frag  .raymarch.frag.1sphere  hud.frag  raymarch.frag  raymarch.frag.spv  raymarch.vert  raymarch.vert.spv
